[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Icons/left_arrow.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Milky Coffee.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Icons/right_arrow.png" type="Texture" id=3]
[ext_resource path="res://Scenes/UI/PageNumber.gd" type="Script" id=4]
[ext_resource path="res://Assets/Effects/Textbox.png" type="Texture" id=5]
[ext_resource path="res://Assets/Icons/TextBox.png" type="Texture" id=6]
[ext_resource path="res://Assets/Fonts/true-crimes.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 7 )

[node name="PageNumber" type="Control"]
modulate = Color( 1, 1, 1, 0.705882 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 2048, 1200 )
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 44.0
margin_top = -5.0
margin_right = 272.0
margin_bottom = 58.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = -20.0
margin_top = -32.0
margin_right = 3460.0
margin_bottom = 1048.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
visible = false
show_behind_parent = true
anchor_left = 0.443359
anchor_top = 0.895
anchor_right = 0.55957
anchor_bottom = 0.976667
margin_right = 714.0
margin_bottom = 294.0
grow_horizontal = 2
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )
region_rect = Rect2( 56.1826, 76.4531, 1372.2, 1378.51 )
patch_margin_left = 59
patch_margin_top = 61
patch_margin_right = 49
patch_margin_bottom = 64
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
anchor_left = 0.44873
anchor_top = 0.9125
anchor_right = 0.55127
anchor_bottom = 0.9625
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 21.0
margin_right = 91.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Page Number"

[node name="SpinBox" type="SpinBox" parent="HBoxContainer"]
margin_left = 95.0
margin_right = 169.0
margin_bottom = 60.0
min_value = -1.0
max_value = 83.0
page = 1.0
value = 1.0

[node name="GoToPage" type="Button" parent="HBoxContainer"]
margin_left = 173.0
margin_right = 210.0
margin_bottom = 60.0
text = "GO!"

[node name="ForwardPage" type="Button" parent="."]
margin_left = 1932.0
margin_top = 1060.0
margin_right = 1982.0
margin_bottom = 1110.0
rect_min_size = Vector2( 50, 50 )
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 3 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackPage" type="Button" parent="."]
margin_left = 30.0
margin_top = 1060.0
margin_right = 80.0
margin_bottom = 1110.0
rect_min_size = Vector2( 50, 50 )
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 1 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -77.0
margin_right = 20.0
margin_bottom = -30.0
custom_fonts/font = SubResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HBoxContainer/GoToPage" to="." method="_on_GoToPage_pressed"]
[connection signal="pressed" from="ForwardPage" to="." method="_on_ForwardPage_pressed"]
[connection signal="pressed" from="BackPage" to="." method="_on_BackPage_pressed"]
